Added basic menu navigation

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,135 @@
-<div>
+<style>
+    #nav-menu a {
+        text-decoration: none;
+    }
 
+    #nav-menu ul {
+        list-style: none;
+        margin: 0;
+        padding-left: 0;
+    }
+
+    #nav-menu li {
+        display: block;
+        float: left;
+        padding: 2rem;
+        position: relative;
+        text-decoration: none;
+        transition-duration: 0.5s;
+    }
+
+    #nav-menu
+    li:hover,
+    li:focus-within {
+        cursor: pointer;
+    }
+
+    
+    #nav-menu li:focus-within a {
+        outline: none;
+    }
+
+    #nav-menu ul li ul {
+        background: rgb(213, 216, 235);
+        visibility: hidden;
+        opacity: 0;
+        min-width: 5rem;
+        position: absolute;
+        transition: all 0.5s ease;
+        margin-top: 1rem;
+        left: 0;
+        display: none;
+    }
+
+    #nav-menu
+    ul li:hover>ul,
+    ul li:focus-within>ul,
+    ul li ul:hover,
+    ul li ul:focus {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+    }
+
+    #nav-menu ul li ul li {
+        clear: both;
+        width: 100%;
+    }
+</style>
+
+<div id="nav-menu">
+    <ul>
+        <li>
+            Encounters
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'Encounters' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+        <li>
+            Rumors
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'Rumors' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+        <li>
+            Items
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'Items' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+        <li>
+            People
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'People' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+        <li>
+            Groups
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'Groups' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+        <li>
+            Locations
+            <ul>
+                {% for item in site.notes %}
+                {% if item.menu == 'Locations' %}
+                <li {% if page.url contains item.url %}class="active" {% endif %}><a href="{{ item.url }}">{{ item.title
+                        }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </li>
+    </ul>
 </div>
